# Distributed-Task-Scheduler

./: CMakeLists.txt  Client.cpp  Client.hpp  README.md  Server.cpp  Server.hpp  TaskQueue.cpp  ThreadPool.cpp  ThreadPool.hpp  main.cpp
include/: Database.hpp  Task.hpp  TaskQueue.hpp
src/: Database.cpp
